tests/negative/regression/r11.orng
// r11.orng:6:34: error: expected a value of type `[]String`
//     let (a, b, c): []String = (0, 0, 0)
//                                 ^
// 
fn main()->() {
    let (a, b, c): []String = (0, 0, 0)
}